---version 2.0.2 released---
10-aug-2008 - punkrockguy318 - Added lua script loading hotkey in sdl build (f3).  Non win32 SDL requires zenity for this to function.
10-aug-2008 - punkrockguy318 - Build script cleanup
10-aug-2008 - zeromus - SF [ 2030405 ] Avi recording: no sound b0rks format
10-aug-2008 - zeromus - SF [ 2037878 ] Convert .fcm doesn't do special characters
09-aug-2008 - zeromus - SF [ 2040463 ] Add an "author" text field in the record movie dialog
09-aug-2008 - zeromus - re-enable support for old-format savestates.
09-aug-2008 - zeromus - SF [ 2041944 ] Savestates remember Lua painting
09-aug-2008 - zeromus - support loading movies from archives
08-aug-2008 - adelikat - added input display to the FCEUX main menu
08-aug-2008 - adelikat - fixed the (null) in the default lua directory listing
08-aug-2008 - adelikat - added shift+L as default hotkey for reload lua script
08-aug-2008 - adelikat - removed accel ctrl+x (prevented cut from working in accel dialogs)
08-aug-2008 - zeromus - fiddle with nametable viewer to display correct NT,CHR,ATTR data in more cases (specifically, including some exotic mmc5 cases).
08-aug-2008 - zeromus - fix a new bug in windows build which caused fourscore emulation to fail in some cases
07-aug-2008 - zeromus - add an option to pick a constant color to draw in place of BG when BG rendering is disabled (look for gNoBGFillColor in config; 255 means to use palette[0])
07-aug-2008 - adelikat - added a mute turbo option in sound config
07-aug-2008 - adelikat - new toggle - frame adv. - lag skip (menu item + hotkey mapping + saved in config)
07-aug-2008 - adelikat - put in -32000 protection on all dialogs that remember x,y
06-aug-2008 - adelikat - change config filename from fceu98.cfg to fceux.cfg
06-aug-2008 - zeromus - add lagcounter and lagflag to savestate
06-aug-2008 - zeromus - SF [ 2040448 ] View Slots bug - does not include new savestate naming
06-aug-2008 - zeromus - restore the debugger snap functionality